sample_nginx-ingress-controller/01_namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: sample-nginx-ingress-controller
