sample_nginx-ingress-controller/11_apple-pod.yaml
apiVersion: v1

# kind: Pod
kind: Deployment

metadata:
  name: apple-app
  namespace: sample-nginx-ingress-controller
  labels:
    app: apple
spec:
replicas: 1  
template:
  spec:
    containers:
      - name: apple-app
        image: hashicorp/http-echo  # https://hub.docker.com/r/hashicorp/http-echo/
        args:
          - "-text=apple"
