sample_nginx-ingress-controller/21_banana-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  labels:
    app: banana
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo  # https://hub.docker.com/r/hashicorp/http-echo/
      args:
        - "-text=banana"
