sample_nginx-ingress-controller/21_pod-banana.yaml
kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  namespace: sample-nginx-ingress-controller
  labels:
    app: banana
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo  # https://hub.docker.com/r/hashicorp/http-echo/
      args:
        - "-text=banana"
