sample_nginx-ingress-controller/02_apple-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # default port -> refs: https://hub.docker.com/r/hashicorp/http-echo/
