sample_nginx-ingress-controller/22_banana-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: banana-service
spec:
  selector:
    app: banana
  ports:
    - port: 5678 # default port -> refs: https://hub.docker.com/r/hashicorp/http-echo/
