sample_nginx-ingress-controller/31-ingress.yaml
kind: Ingress
apiVersion: extensions/v1
metadata:
  name: example-ngress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /apple
          backend:
            serviceName: apple-service
            servicePort: 5678
        - path: /banana
          backend:
            serviceName: banana-service
            servicePort: 5678
